--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -4,20 +4,22 @@
   </view>
   <view class="desc"> TDesign 适配微信小程序的组件库 </view>
 
+  <view class="box refresh-button">
+    <t-button theme="primary" block bind:tap="refreshData">获取新闻</t-button>
+  </view>
+
   <view class="box remote-data">
     <t-tag theme="primary" block>远程数据：{{name}} {{age}} {{phone}}</t-tag>
   </view>
 
-  <pull-down-list
+  <news-list
     wx:for="{{news}}"
     name="{{item.title}}"
+    icon="view-module"
+    content="{{item.content}}"
     wx:key="title"
     bind:click="showNewsDetail"
   />
-
-  <view class="box refresh-button">
-    <t-button theme="primary" block bind:tap="refreshData">刷新数据</t-button>
-  </view>
 
   <pull-down-list
     wx:for="{{list}}"
